src/test/deca/context/valid/avecObjet/is_instance_of_null.deca
// Description :
//    is instanceof null
//
// Resultats :
//    OK

class A {}

{
    A a = null;
    println(a instanceof A);
    println(null instanceof A);
}