src/test/deca/context/invalid/avecObjet/is_instance_of_inconnu.deca
// Description :
//    opérateur instanceof avec rvalue de type inconnu
//
// Resultats :
//    Erreur contextuelle
//    Ligne 12 : Type Inconnu non déclaré

class A {}

{
    A a = new A();
    if (a instanceof Inconnu) {
        println("erreur");
    }
}